// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`belongsto  loads 1`] = `
BelongsTo {
  "$obj": Object {
    "belongsTo": EntityReference {
      "$obj": Object {
        "backField": "",
        "entity": "A",
        "field": "id",
      },
      "metadata_": Object {},
    },
    "entity": "B",
    "field": "a",
  },
  "metadata_": Object {
    "name": Object {
      "full": "BBelongsToA",
      "normal": "BA",
      "short": "A",
    },
    "persistence": Object {
      "embedded": false,
      "identity": false,
      "indexed": true,
      "required": false,
      "single": true,
      "stored": true,
    },
    "verb": "BelongsTo",
  },
}
`;

exports[`belongsto  loads 2`] = `
Object {
  "belongsTo": "A#id",
  "embedded": false,
  "entity": "B",
  "field": "a",
  "metadata": Object {
    "name": Object {
      "full": "BBelongsToA",
      "normal": "BA",
      "short": "A",
    },
    "persistence": Object {
      "embedded": false,
      "identity": false,
      "indexed": true,
      "required": false,
      "single": true,
      "stored": true,
    },
    "verb": "BelongsTo",
  },
  "name": undefined,
  "opposite": undefined,
}
`;
